<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".todo_list.SimpleTodoListActivity"
    >

    <TextView
        android:id="@+id/todo_list_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="16dp"

        android:text="@string/todo_list"

        android:textSize="32sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/todo_list_frame_layout"

        />

    <FrameLayout
        android:id="@+id/todo_list_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginBottom="8dp"

        app:layout_constraintTop_toBottomOf="@id/todo_list_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_new_item_edittext"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/todo_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="LinearLayoutManager"
            />

    </FrameLayout>

    <TextView
        android:id="@+id/add_new_item_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"

        android:text="@string/add_a_new_item"
        android:textSize="24sp"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/add_new_item_edittext"
        />

    <EditText
        android:id="@+id/add_new_item_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:autofillHints="@string/do_something"
        android:hint="@string/do_something"

        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="8dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/add_new_item_label"
        app:layout_constraintEnd_toStartOf="@id/add_new_item_button"
        />

    <Button
        android:id="@+id/add_new_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"

        android:text="@string/new_item_button_text"

        app:layout_constraintTop_toTopOf="@id/add_new_item_edittext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="addNewItemButtononClick"
        />

</androidx.constraintlayout.widget.ConstraintLayout>